# A-RAG_Multi-Agent

./: .gitignore  A-RAG_Multi-Agent_實作目標與MVP計畫.md  A-RAG與Autonomous_AI_Agents整合實驗計畫.docx  README.md  config.yaml  pyproject.toml
configs/: experiment.yaml  models.yaml
contracts/: result.schema.json  retrieval-log.schema.json  task.schema.json
docs/: experiment-contract.md  final_report_draft.md  manual-review-rubric.md
docs/milestones/: M1_acceptance.md  M2_acceptance.md  M3_acceptance.md  M4_acceptance.md  M5_acceptance.md  M6_acceptance.md  M7C1_acceptance.md  M7C3_reprobe_report.md  M7C_probe_report.md  M7D_acceptance.md  M7E0_acceptance.md  M7E10_preflight.md  M7E11_abort_audit.md  M7E13_acceptance.md  M7E14_preflight.md  M7E16_acceptance.md  M7E17_acceptance.md  M7E18_acceptance.md  M7E18_preflight.md  M7E19_abort_audit.md  M7E1_acceptance.md  M7E20_acceptance.md  M7E21_acceptance.md  M7E22_preflight.md  M7E23_abort_audit.md  M7E26_preflight.md  M7E27_execution_audit.md  M7E27_pilot15_table.md  M7E2_acceptance.md  M7E5_acceptance.md  M7E6_preflight.md  M7E9_acceptance.md  M7E_full_run_approval_package.md  M7_acceptance.md
docs/security/: hermes-gateway-credential-contract.md
experiments/: cli.py  tasks.json
experiments/live/: __init__.py  (+11 more)
manual_agents/: README.md  operator_checklist.md  rag_log_template.md  run_record_template.md
manual_hermes_upload/: README.md
manual_task_packets/: README.md
student_system/: API_SPEC.md  ISSUES.md  README.md  SNAPSHOT.json  STYLE_GUIDE.md
論文資料/: A-RAG_Multi-Agent_實作目標與MVP計畫.md  A-RAG_實驗定量對照分析表.md  專案架構與實驗設計.md
(+320 files in other folders)
