[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arag-multi-agent"
version = "0.1.0"
description = "A-RAG × Autonomous AI Agents Integration Experiment for Student Information System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Research Team", email = "research@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-p", "no:cacheprovider"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
